Fix spacing on the matches page.

--- a/app/assets/stylesheets/tandem_app.css.scss
+++ b/app/assets/stylesheets/tandem_app.css.scss
@@ -704,12 +704,15 @@ span.tm-logo {
   @include background-size(cover !important);
 }
 
+ol#tm-matches {
+  margin: 90px 0 0 0;
+}
 
 ol#tm-matches > li.tm-match,
 #tm-profile {
   display: inline-block;
   padding: 10px;
-  margin: 90px 0 10px 0;
+  margin: 0 0 10px 0;
   background: $white;
   font-size: 14px;
   line-height: 25px;
